--- a/Day 05/Tailwind/Tailwind.html
+++ b/Day 05/Tailwind/Tailwind.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exercise 01</title>
+    <title>Tailwind CSS</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link
       rel="stylesheet"
@@ -27,7 +27,10 @@
       </nav>
     </header>
 
-    <div id="sidebar" class="fixed top-0 right-0 h-full w-64 bg-white transform translate-x-full trainsition-transform duration-300">
+    <div
+      id="sidebar"
+      class="fixed top-0 right-0 h-full w-64 bg-white transform translate-x-full trainsition-transform duration-300"
+    >
       <div class="p-4 flex justify-between items-center border-b">
         <h2 class="text-xl font-bold">Menu</h2>
         <button id="closebar" class="text-3xl">X</button>
@@ -49,12 +52,13 @@
         class="flex flex-col justify-center items-center h-75 bg-linear-50 from-sky-200 to-red-200"
       >
         <div
-          class="flex flex-col items-center justify-center text-3xl font-bold text-gray-800 mb-7 sm:flex-row sm:text-4xl">
+          class="flex flex-col items-center justify-center text-3xl font-bold text-gray-800 mb-12 sm:flex-row sm:text-4xl"
+        >
           <p>Hello!</p>
           <p class="ml-4">This is Prosanto7</p>
         </div>
         <button
-          class="bg-blue-500 text-white font-bold px-6 py-2 rounded hover:bg-blue-800"
+          class="bg-blue-500 text-white font-bold px-6 py-2 rounded hover:bg-blue-800 animate-bounce"
         >
           Let' Get Started
         </button>
